--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_storage: ^11.6.0
   flutter_native_splash: ^2.3.0
   google_maps_flutter: ^2.5.0
+  workmanager: ^0.5.2
   geolocator: ^10.1.1
 
 dev_dependencies:
